--- a/templates/contribuir.html
+++ b/templates/contribuir.html
@@ -17,9 +17,9 @@
 </head>
 <body class="bg-evento font-sans">
     <div class="max-w-xl mx-auto p-6 bg-white mt-10 rounded shadow">
-        <h1 class="text-2xl font-bold mb-4 text-purple-700">Contribuir para: {{ presente[1] }}</h1>
-        <p><strong>Valor total:</strong> R$ {{ presente[2] }}</p>
-        <p><strong>Valor da cota:</strong> R$ {{ presente[3] }}</p>
+        <h1 class="text-2xl font-bold mb-4 text-purple-700">Contribuir para: {{ presente['nome'] }}</h1>
+        <p><strong>Valor total:</strong> R$ {{ presente['valor_total'] }}</p>
+        <p><strong>Valor da cota:</strong> R$ {{ presente['valor_cota'] }}</p>
 
         <form method="post" class="mt-6 space-y-4">
             <label class="block">
