--- a/templates/contribuir.html
+++ b/templates/contribuir.html
@@ -22,14 +22,18 @@
         <p><strong>Valor da cota:</strong> R$ {{ presente['valor_cota'] }}</p>
 
         <form method="post" class="mt-6 space-y-4">
+            {% if presente['cotas_restantes'] > 1 %}
+            <label class="block">
+                Quantas cotas você deseja contribuir?
+                <input type="number" name="cotas" min="1" max="{{ presente['cotas_restantes'] }}" value="1" required class="w-full mt-1 p-2 border rounded">
+            </label>
+            {% else %}
+            <input type="hidden" name="cotas" value="1">
+            {% endif %}
+
             <label class="block">
                 Seu nome:
                 <input type="text" name="nome_convidado" class="w-full mt-1 p-2 border rounded" placeholder="Opcional">
-            </label>
-
-            <label class="block">
-                Quantas cotas você deseja contribuir?
-                <input type="number" name="cotas" min="1" max="{{ presente[5] }}" class="w-full mt-1 p-2 border rounded" required>
             </label>
 
             <div class="p-4 bg-purple-100 border-l-4 border-purple-500 text-purple-700 rounded">
