--- a/templates/listapresentes.html
+++ b/templates/listapresentes.html
@@ -50,9 +50,12 @@
                 {% endif %}
 
                 {% if session.get('logado') %}
-                <form action="{{ url_for('deletar_presente', item_id=presente['id']) }}" method="post" onsubmit="return confirm('Tem certeza que deseja excluir este presente?');">
-                    <button type="submit" class="mt-2 text-sm text-red-600 hover:underline">🗑️ Excluir</button>
-                </form>
+                <div class="flex justify-between mt-2">
+                    <a href="{{ url_for('editar_presente', id=presente['id']) }}" class="text-sm text-blue-600 hover:underline">✏️ Editar</a>
+                    <form action="{{ url_for('deletar_presente', item_id=presente['id']) }}" method="post" onsubmit="return confirm('Tem certeza que deseja excluir este presente?');">
+                        <button type="submit" class="text-sm text-red-600 hover:underline">🗑️ Excluir</button>
+                    </form>
+                </div>
                 {% endif %}
             </div>
             {% endfor %}
